fix: wrap HiddenSelect in a positioned Box

--- a/packages/fuselage/src/components/Accordion/Accordion.styles.scss
+++ b/packages/fuselage/src/components/Accordion/Accordion.styles.scss
@@ -66,8 +66,6 @@
 }
 
 .rcx-accordion-item__panel {
-  position: relative;
-
   visibility: hidden;
 
   overflow: hidden;
